# ClientServer_RemoteShell

./: CMakeLists.txt  README.md
client/headers/: client.h
client/src/: client.cpp  main.cpp
server/headers/: server.h
server/src/: main.cpp  server.cpp
